--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -88,6 +88,14 @@
         </li>
       {% endif %}
 
+      {% if author.googlescholar %}
+        <li>
+          <a href="{{ author.googlescholar }}" itemprop="sameAs" rel="nofollow noopener noreferrer me">
+            <i class="fas fa-fw fa-graduation-cap" aria-hidden="true"></i><span class="label">Google Scholar</span>
+          </a>
+        </li>
+      {% endif %}
+
       {% if author.xing %}
         <li>
           <a href="https://www.xing.com/profile/{{ author.xing }}" itemprop="sameAs" rel="nofollow noopener noreferrer me">
